        PR tree-opt/20127         * tree-sra.c (instantiate_element): Copy TREE_THIS_VOLATILE from         the type.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@95530 138bc75d-0d04-0410-961f-82ee72b054a4